# KOOM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  build.gradle  gradle.properties  settings.gradle
koom-common/kwai-android-base/src/main/cpp/: Android.bp  CMakeLists.txt  abi_compatibility.cpp  chrono_utils.cpp  cmsg.cpp  errors_unix.cpp  errors_windows.cpp  liblog_symbols.cpp  logging_splitters.h  mapped_file.cpp  process.cpp  properties.cpp  stringprintf.cpp  strings.cpp  test_utils.cpp
koom-common/kwai-android-base/src/main/cpp/async_safe/: async_safe_log.cpp
koom-common/kwai-android-base/src/main/cpp/bionic/: ndk_port.cpp
koom-common/kwai-android-base/src/main/cpp/bionic/system_property/: prop_info.cpp
koom-common/kwai-android-base/src/main/cpp/fmtlib/: Android.bp
koom-common/kwai-android-base/src/main/cpp/fmtlib/support/: Android.mk  build.gradle
koom-common/kwai-android-base/src/main/cpp/include/android-base/: cmsg.h  collections.h  errno_restorer.h  errors.h  expected.h  file.h  macros.h  mapped_file.h  memory.h  parsebool.h  parsedouble.h  parsenetaddress.h  properties.h  scopeguard.h  stringprintf.h  strings.h  test_utils.h  thread_annotations.h  threads.h  unique_fd.h
koom-common/kwai-android-base/src/main/cpp/include/async_safe/: CHECK.h  async_safe_stl.h  log.h  stack_allocator.h
koom-common/kwai-android-base/src/main/cpp/include/bionic/: macros.h  mte_kernel.h  ndk_port.h  reserved_signals.h  tls.h  tls_defines.h
koom-common/kwai-android-base/src/main/cpp/include/jni_util/: scoped_local_ref.h
koom-common/kwai-android-base/src/main/cpp/include/kwai_linker/: elf_reader.h  elf_wrapper.h  kwai_dlfcn.h
koom-common/kwai-android-base/src/main/cpp/include/kwai_util/: ktime.h  kwai_macros.h
koom-common/kwai-android-base/src/main/cpp/include/private/: CachedProperty.h  ScopedPthreadMutexLocker.h  android_filesystem_config.h
koom-common/kwai-android-base/src/main/cpp/include/procinfo/: process.h
koom-common/kwai-android-base/src/main/cpp/kwai_linker/: elf_reader.cpp  kwai_dlfcn.cpp  map_util.hpp
koom-common/kwai-android-base/src/main/cpp/kwai_util/: ktime.cpp
koom-common/kwai-android-base/src/main/cpp/libcutils/include/cutils/: list.h
koom-common/kwai-android-base/src/main/cpp/liblog/: log_event_list.cpp  log_event_write.cpp  log_time.cpp  logd_reader.cpp  logd_writer.cpp  logd_writer.h  logger.h  logger_read.cpp  logger_write.cpp  logger_write.h  logprint.cpp  pmsg_reader.cpp  pmsg_reader.h  pmsg_writer.cpp  pmsg_writer.h  properties.cpp
koom-common/kwai-android-base/src/main/cpp/liblog/include/android/: klog.h
koom-common/kwai-android-base/src/main/cpp/liblog/include/log/: event_tag_map.h  kcheck.h  log.h  log_event_list.h  log_id.h  log_properties.h  log_radio.h  log_read.h  log_system.h  log_time.h  logger_write.h  logprint.h
koom-common/kwai-android-base/src/main/cpp/liblog/include/private/: android_logger.h
koom-common/kwai-android-base/src/main/cpp/libsystem/include/system/: graphics-base-v1.0.h  graphics-base-v1.1.h  graphics-base-v1.2.h  graphics-base.h  graphics-sw.h  graphics.h  thread_defs.h
koom-common/kwai-android-base/src/main/cpp/libutils/include/utils/: Errors.h  FastStrcmp.h  RWLock.h  (+1 more)
koom-common/kwai-android-base/src/main/cpp/procinfo/: process.cpp  process_map.cpp
koom-common/kwai-unwind/src/main/cpp/: CMakeLists.txt
koom-common/kwai-unwind/src/main/cpp/dexfile_support/: dex_file_ext.cpp
koom-common/kwai-unwind/src/main/cpp/fast_unwind/: fast_unwind.cpp  fast_unwind_test.cpp
koom-common/kwai-unwind/src/main/cpp/include/fast_unwind/: fast_unwind.h  fast_unwind_test.h
koom-common/kwai-unwind/src/main/cpp/libbacktrace/: BacktraceCurrent.cpp  BacktraceCurrent.h  BacktraceMap.cpp  ThreadEntry.cpp  UnwindStackMap.cpp
koom-common/kwai-unwind/src/main/cpp/libunwindstack/: Android.bp  AndroidVersions.md  DwarfCfa.cpp  Elf.cpp  ElfInterfaceArm.cpp  ElfInterfaceArm.h  Global.cpp  Memory.cpp  RegsArm64.cpp  TEST_MAPPING  ThreadEntry.cpp  Unwinder.cpp
koom-common/kwai-unwind/src/main/cpp/libunwindstack/tools/: unwind_for_offline.cpp  unwind_info.cpp  unwind_reg_info.cpp
koom-native-leak/src/main/jni/: CMakeLists.txt
koom-native-leak/src/main/jni/include/: constants.h  memory_analyzer.h  memory_map.h
koom-native-leak/src/main/jni/include/utils/: auto_time.h  concurrent_hash_map.h  scoped_local_ref.h  stack_trace.h
koom-native-leak/src/main/jni/src/: jni_leak_monitor.cpp  leak_monitor.cpp  memory_analyzer.cpp
koom-native-leak/src/main/jni/src/utils/: hook_helper.cpp  stack_trace.cpp
koom-thread-leak/src/main/cpp/: CMakeLists.txt
koom-thread-leak/src/main/cpp/src/: jni_bridge.cpp  koom.cpp  koom.h
koom-thread-leak/src/main/cpp/src/common/: callstack.cpp  callstack.h  constant.h  item.cpp  log.h  looper.cpp  looper.h  util.h
koom-thread-leak/src/main/cpp/src/include/: koom.h
koom-thread-leak/src/main/cpp/src/include/common/: callstack.h  constant.h  log.h  looper.h  util.h
koom-thread-leak/src/main/cpp/src/include/thread/: hook_looper.h  loop_item.h  thread_holder.h  thread_hook.h  thread_item.h
koom-thread-leak/src/main/cpp/src/thread/: hook_looper.cpp  hook_looper.h  loop_item.h  thread_holder.cpp  thread_holder.h  thread_hook.cpp  thread_hook.h  thread_item.cpp  thread_item.h
kwai-unwind/src/main/cpp/: CMakeLists.txt  unwind.cpp
kwai-unwind/src/main/cpp/dexfile_support/: dex_file_supp.cpp
kwai-unwind/src/main/cpp/fast_unwind/: fast_unwind.cpp  fast_unwind_test.cpp
kwai-unwind/src/main/cpp/include/art_api/: dex_file_external.h  dex_file_support.h
kwai-unwind/src/main/cpp/libbacktrace/: Android.bp  Backtrace.cpp  UnwindStack.cpp  backtrace_test.cpp
kwai-unwind/src/main/cpp/libunwindstack/: DwarfCfa.h  DwarfSection.cpp  Elf.cpp  ElfInterface.cpp  LocalUnwinder.cpp  Log.cpp  MapInfo.cpp  Maps.cpp  Memory.cpp  MemoryMte.cpp  Regs.cpp  ThreadUnwinder.cpp  Unwinder.cpp
kwai-unwind/src/main/cpp/libunwindstack/include/unwindstack/: DwarfLocation.h  MapInfo.h  Regs.h  RegsArm64.h
kwai-unwind/src/main/cpp/libunwindstack/tools/: unwind_symbols.cpp
(+421 files in other folders)
